# ALPR

./: .gitignore  CMakeLists.txt  main.cpp
src/: ImageWorker.cpp  ImageWorker.h  util.cpp  util.h
